--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.0",
-    "next": "12.3.1",
+    "next": "^15.4.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
